@startuml
allowmixing
skinparam linetype ortho

class LottoCLI {
   + main()
   - displayMenu()
   - void unglücksZahlenErstellen()
   - void unglücksZahlenLöschen()
   - unglücksZahlenAusgeben(): String
   - tippReihe6aus49Erzeugen(): int[]
   - tippReiheEurojackpotErzeugen(): int[]
   - tippReihe6aus49Ausgeben(): int[]
   - tippReiheEurojackpotAusgeben(): int[]
   + lesenNummernVonKommandozeile() : int[]
   - checkZeilenAnzahl(): void

}

class lottoschein{
    unglücksZahlen[]: int

    + void erstellenUnglückszahl(int zahl)
    + void löschenUnglückszahl(int zahl)
    + ausgabeUnglückszahl(): String
}

class lotto6aus49 extends lottoschein implements QuickTippGenerator{
    - tippReihe : int[6]
}

class eurojackpot extends lottoschein implements QuickTippGenerator{
    - FünfAusFünfzigTippreihe[5]
    - zweiAusZehnTippreihe: int[2]
    + erzeugeZweiAusZehn(): int[]
    + ausgabeZweiAusZehn(): String
    }

interface QuickTippGenerator{
    + erzeugeTippreihe(): int[]
    + ausgabeTippreihe(): String
}

file "Unglückszahlen.txt"

note right of QuickTippGenerator::erzeugeTippreihe
- Ausschliessen der Unglückszahlen aus der Tippreihe
end note

note right of QuickTippGenerator::ausgabeTippreihe
    Sortierte, aufsteigende Reihenfolge der Zahlen der Tippreihe,
    Erkennbare Trennung für die Eurojackpot-Tippreihe erst 5aus50 dann 2aus10.
end note

note right of LottoCLI::auswahlLottoSpiel
- Wenn User nichts angibt,
   wird Lotto 6aus49 ausgewählt
- Ungültiger Eingabeparameter:
   Fehlermeldung mit Usereingabe
end note

note left of lottoschein::erstellenUnglückszahlen
- Gültiger Zahlenraum: 1 bis 50
- Fehlermeldung bei Angabe einer Zahl
   außerhalb des gültigen Zahlenraums:
   Ausgabe des gültigen Zahlenraums
end note

note left of lotto6aus49::tippReihe
Gülter Zahlenraum: 1 bis 49
end note

note left of eurojackpot::FünfAusFünfzigTippreihe
Gültiger Zahlenraum: 1 bis 50
end note

note left of eurojackpot::zweiAusZehnTippreihe
Gültiger Zahlenraum: 1 bis 10
end note

note right of LottoCLI::tippReihe6aus49Erzeugen
Solange Tippreihe erzeugen bis User Eingabe stoppt
end note

eurojackpot -[hidden]-> QuickTippGenerator
eurojackpot -[hidden]--> lottoschein
lottoschein "2" *---- "1" LottoCLI
lottoschein -- "Unglückszahlen.txt"

lottoschein -[hidden]- lotto6aus49
@enduml
